--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xml2json",
+  "name": "@bartimaeus/xml2json",
   "version": "0.12.0",
   "description": "Converts xml to json and vice-versa, using node-expat.",
   "repository": "git://github.com/bartimaeus/node-xml2json.git",
